<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardDroid</string>
    <string name="menu_settings">Settings</string>

    <string-array name="http_protocols">
        <item>http://</item>
        <item>https://</item>
    </string-array>

    <string name="http_warning">"If you don't use encryption (HTTPS), other people may easily intercept your login details, contacts and events."</string>
    <string name="user_name">User name:</string>
    <string name="password">Password:</string>
    <string name="root_url">Root URL (collections will be auto-detected):</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="invalid_base_url">Invalid base URL: </string>
    <string name="title_select_collections">CardDroid: Select collections</string>
    <string name="exception_io">I/O error: %s</string>
    <string name="exception_uri_syntax">Invalid URI: %s</string>
    <string name="exception_incapable_resource">Missing capabilities: %s</string>
    <string name="neither_caldav_nor_carddav">Neither CalDAV nor CardDAV available</string>
    <string name="error_principal_path">"Couldn't determine principal path (RFC 5397)"</string>
    <string name="error_home_set_address_books">"Couldn't determine address book home set"</string>
    <string name="error_home_set_calendars">"Couldn't determine calendar home set"</string>
    <string name="add_account">Add account</string>
    <string name="querying_server">Querying server. Please wait…</string>
    <string name="exception_http">HTTP error: %s</string>
    <string name="what_to_sync">Which collections shall be synchronized?</string>
    <string name="address_books">Address books</string>
    <string name="calendars">Calendars</string>
    <string name="select_address_book">Select up to one address book (tap again to unselect):</string>
    <string name="select_calendars">Select your calendars:</string>
    <string name="auth_preemptive">Preemptive authentication (recommended, but incompatible with Digest auth)</string>
    
    <string name="cardroid_help">CardDroid Help</string>
    <string name="show_sync_settings">Manage sync accounts</string>
    <string name="html_info"><![CDATA[
       <h2>Welcome to CardDroid!</h2>
       
       <p>CardDroid is a backport of <a href="http://davdroid.bitfire.at">DAVdroid</a> down to Android 2.3.3.</p>

       <p>This version don\'t support calendar. Only carddav is supported.</p>

       <p><strong>If you have a 4+ device, use <a href="http://davdroid.bitfire.at">DAVdroid</a> instead this fork.</strong></p>       
	      
	   <h2>Usage</h2>
	   Add a CardDroid account in the settings of your phone. Synchronization is handled like other accounts.
	   
	   <h2>License (Original  DAVdroid one)</h2>
	   <p>Copyright (c) 2013 Richard Hirner (<a href="http://www.bitfire.at">bitfire web engineering</a>). All rights reserved.
	   This program and the accompanying materials are made available under the terms of the GNU Public License v3.0 which
	   accompanies this distribution, and is available at <a
	   href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>.</p>
	   
	   <p>--</p>

       <p>Please consider <a href="http://davdroid.bitfire.at/donate?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">donating to DAVdroid</a></p>

  ]]></string>
    <string name="account_details">Account details</string>
    <string name="account_name">Account name:</string>
    <string name="account_name_hint">My CalDAV/CardDAV Account</string>
    <string name="email_address">Email address:</string>
    <string name="organizer_hint">"ORGANIZER of your events; required if you use attendee info"</string>
    <string name="account_name_info">"Use your email address as account name because Android will use the account name as ORGANIZER field for events you create. You can't have two accounts with the same name.</string>

    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>

</resources>
