<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <android.support.v7.widget.GridLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:columnCount="2"
        android:padding="10dp"
        app:useDefaultMargins="true" >

        <TextView
            app:layout_columnSpan="2"
            app:layout_gravity="left"
            android:layout_marginBottom="20dp"
            android:text="@string/account_details"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            app:layout_gravity="left"
            android:text="@string/account_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/account_name"
            app:layout_gravity="fill_horizontal"
            android:hint="@string/account_name_hint"
            android:inputType="textEmailAddress" />
        
        <TextView
            android:id="@+id/account_name_info"
            android:layout_width="fill_parent"
            app:layout_columnSpan="2"
            app:layout_gravity="left"
            android:drawableLeft="@drawable/extra_actions_about"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/account_name_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <android.support.v7.widget.Space
            app:layout_gravity="left|top"
            app:layout_row="3" />
       
    </android.support.v7.widget.GridLayout>

</ScrollView>