<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <android.support.v7.widget.GridLayout 
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:columnCount="2"
        android:padding="10dp"
        app:useDefaultMargins="true" >

        <TextView
            app:layout_columnSpan="2"
            app:layout_gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/root_url" />

        <Spinner
            android:id="@+id/select_protocol"
            android:layout_width="wrap_content"
            app:layout_gravity="left"
            android:entries="@array/http_protocols" />

        <EditText
            android:id="@+id/baseURL"
            app:layout_gravity="fill_horizontal"
            android:hint="myserver/dav/"
            android:inputType="textUri"
            android:layout_width="0dp"
            android:text="" />

        <TextView
            android:id="@+id/http_warning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            app:layout_columnSpan="2"
            app:layout_gravity="left"
            android:drawableLeft="@drawable/alerts_and_states_warning"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/http_warning" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/userName"
            app:layout_gravity="fill_horizontal"
            android:inputType="textNoSuggestions"
            android:text="" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            app:layout_gravity="fill_horizontal"
            android:inputType="textPassword"
            android:text="" />
        
        <CheckBox
            android:id="@+id/auth_preemptive"
            app:layout_columnSpan="2"
            android:checked="true"
            app:layout_gravity="left"
            android:text="@string/auth_preemptive" />
        
        <android.support.v7.widget.Space app:layout_gravity="left|top" />
        
    </android.support.v7.widget.GridLayout>

</ScrollView>